--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
             "input-otp": "^1.4.2",
             "jspdf": "^4.0.0",
             "lucide-react": "^0.487.0",
+            "motion": "^12.26.2",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
